# nrf-ota

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: lint.yml
src/nrf_ota/: __init__.py  __main__.py  _const.py  _zip.py  dfu.py  scan.py
tests/: conftest.py  test_dfu.py
