[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nrf-ota"
version = "0.4.0"
description = "Python package for OTA updating the bootloader on nrf chips"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    {name = "g4bri3lDev", email = "admin@g4bri3l.de"}
]

keywords = ["bluetooth", "ble", "nrf", "nordic", "dfu", "ota", "firmware"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware",
]

dependencies = ["bleak>=0.21.0"]

[project.scripts]
nrf-ota = "nrf_ota.__main__:main"

[project.urls]
Homepage = "https://opendisplay.org"
Repository = "https://github.com/OpenDisplay-org/nrf-ota"
Documentation = "https://github.com/OpenDisplay-org/nrf-ota#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/nrf_ota"]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = ["ota_POC.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.10",
    { include-group = "test" },
]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=0.23.0",
]
